--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -29,34 +29,33 @@ jobs:
         with:
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/${{ env.REPO_NAME }}:latest
-#
-#  deploy:
-#    runs-on: ubuntu-latest
-#    needs: build
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v3
-#        with:
-#          fetch-depth: 0
-#
-#      - name: Install Helm
-#        uses: azure/setup-helm@v3
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#
-#      - name: Save Kube Config
-#        env:
-#          KUBECONFIG: ${{ secrets.KUBECONFIG }}
-#        run: |
-#          mkdir -p ~/.kube/
-#          echo "${KUBECONFIG}" > ~/.kube/config
-#          chmod 600 ~/.kube/config
-#
-#      - name: Deploy app
-#        env:
-#          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-#        run: |
-#          cd helm
-#          helm upgrade minijournal --namespace=minijournal -f values.yaml . \
-#            --set=envSecrets.POSTGRES_PASSWORD="${POSTGRES_PASSWORD}"
-#          kubectl rollout restart deployment
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Install Helm
+        uses: azure/setup-helm@v3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Save Kube Config
+        env:
+          KUBECONFIG: ${{ secrets.KUBECONFIG }}
+        run: |
+          mkdir -p ~/.kube/
+          echo "${KUBECONFIG}" > ~/.kube/config
+          chmod 600 ~/.kube/config
+
+      - name: Deploy app
+        env:
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+        run: |
+          cd helm
+          helm upgrade generach --namespace=generach -f values.yaml .
+          kubectl rollout restart deployment
