Change service port name from frontend to http in the ingress.yaml file. This change was made to accurately reflect the purpose of the port.

--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -38,5 +38,5 @@ spec:
               service:
                 name: {{ include "generach.fullname" $ }}
                 port:
-                  name: frontend
+                  name: http
     {{- end}}
