Added generach.ru as a host in the ingress configuration and updated the TLS secret to include generach.ru as well. The changes were made to support the addition of the generach.ru domain to the application.

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -16,10 +16,12 @@ ingress:
     cert-manager.io/issuer: letsencrypt-prod
   hosts:
     - xn--80afga3bt4c.xn--p1ai
+    - generach.ru
   tls:
     - secretName: generach-tls
       hosts:
         - xn--80afga3bt4c.xn--p1ai
+        - generach.ru
 
 serviceAccount:
   create: true
